# cmakeTest

./: CMakeLists.txt  README.md  form.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res_assets.qrc  res_internal.qrc  res_qml.qrc
qml/: .test1.qml.un~  another.qml  test1.qml
untitled_lib1/: CMakeLists.txt  untitled_lib1.cpp  untitled_lib1.h
